--- a/linking_ui/OntoSimUI/package.json
+++ b/linking_ui/OntoSimUI/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.0.3",
     "bootstrap": "^3.4.1",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.14",
     "rxjs": "~6.4.0",
     "shelljs": "^0.8.3",
     "tslib": "^1.9.0",
